@@ -1,11 +1,14 @@
 # Pull base image  
-FROM 10.19.13.18:5000/tomcat:7 
+FROM 10.19.13.36:5000/tomcat:7.x
 MAINTAINER gucl<gucl@asiainfo.com>  
 
+#调整jvm内存大小（会覆盖tomcat基础镜像中的jvm内存大小）
+RUN sed -i '/\# OS/i JAVA_OPTS="$JAVA_OPTS -server -Xms4096M -Xmx4096M -XX:PermSize=128M -XX:MaxPermSize=256M " '  /opt/tomcat/bin/catalina.sh
+
 # Install tomcat7 
-RUN rm -rf /opt/apache-tomcat-7.0.72/webapps/* && mkdir /opt/apache-tomcat-7.0.72/webapps/ROOT
-COPY ./build/libs/uac.war /opt/apache-tomcat-7.0.72/webapps/ROOT/ROOT.war
-RUN cd /opt/apache-tomcat-7.0.72/webapps/ROOT && jar -xf ROOT.war && rm -rf /opt/apache-tomcat-7.0.72/webapps/ROOT.war
+RUN rm -rf /opt/tomcat/webapps/* && mkdir /opt/tomcat/webapps/ROOT
+COPY ./build/libs/uac.war /opt/tomcat/webapps/ROOT/ROOT.war
+RUN cd /opt/tomcat/webapps/ROOT && jar -xf ROOT.war && rm -rf /opt/tomcat/webapps/ROOT.war
 
 ADD ./script/start-web.sh /start-web.sh
 RUN chmod 755 /*.sh  
